<resources>
    <string name="app_name">CA Dreamers</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="menu_courses">Courses</string>
    <string name="menu_top_20">Top 20</string>
    <string name="bottom_combo">Combo Package</string>
    <string name="menu_free_videos">Free Videos</string>
    <string name="menu_books">Books</string>
    <string name="course_detail">Course Detail</string>
    <string name="cart_add">My Cart</string>
    <string name="book_details">Book Details</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="work_progress">Work is in progress</string>
    <string name="card_number">Card Number</string>
    <string name="mm_yy">MM/yy</string>
    <string name="card_holders_name">Name</string>
    <string name="cvv">CVV</string>
    <string name="proceed">Proceed with Card</string>
    <string name="example_name">Vedhavyas</string>
    <string name="example_email">vedhavyas@instamojo.com</string>
    <string name="example_phone">9663556657</string>
    <string name="example_amount">10.00</string>
    <string name="test_description">Test description</string>
    <string name="pay">Pay</string>
    <string name="update_token">Update token</string>
    <string name="loader_message">Please wait&#8230;</string>
    <string name="status_bar">Status bar replacement</string>
    <string name="date_hint">Expiry MM/YY</string>
    <string name="created_date_hint">Created Date</string>
    <string name="cvv_hint">CVV</string>
    <string name="checkout">Checkout</string>
    <string name="error_message_juspay">Failed to initiate Payment. Please try again!</string>
    <string name="please_wait">Please wait&#8230;</string>
    <string name="title_fragment_choose_payment_option">Choose a Payment Option</string>
    <string name="title_fragment_credit_card_form">Credit Card</string>
    <string name="title_fragment_debit_card_form">Debit Card</string>
    <string name="title_fragment_emi_form">EMI</string>
    <string name="title_fragment_upi">Enter VPA</string>
    <string name="choose_your_bank">Choose your Bank</string>
    <string name="choose_your_wallet">Choose your Wallet</string>
    <string name="search_your_bank">Search your Bank</string>
    <string name="search_your_wallet">Search your Wallet</string>
    <string name="brand_trust_logos">Brand trust logos</string>
    <string name="choose_your_credit_card">Choose your Credit Card</string>
    <string name="choose_an_emi_option">Choose an EMI Option</string>
    <string name="emi_on_credit_card">EMI on Credit Card</string>
    <string name="wallets">Wallets</string>
    <string name="net_banking">Net Banking</string>
    <string name="upi">UPI</string>
    <string name="enter_your_virtual_payment_address">Enter your virtual payment address</string>
    <string name="example_mohit_icici">Example: mohit@icici</string>
    <string name="verify_payment">Verify Payment</string>
    <string name="verify_payment_image_description">Verify Payment Image</string>
    <string name="waiting">Waiting&#8230;</string>
    <string name="complete_payment_description">You will receive a notification on your Bank UPI app.\nPlease confirm it to complete the payment.</string>

    <string name="msg_error_unable_select_profile_pic">Unable to set profile image. Please try again!</string>
    <string name="lbl_set_profile_photo">Set profile image</string>
    <string name="lbl_take_camera_picture">Take a picture</string>
    <string name="lbl_choose_from_gallery">Choose from gallery</string>
    <string name="toast_image_intent_null">Image picker option is missing!</string>
    <string name="dialog_permission_title">Grant Permissions</string>
    <string name="dialog_permission_message">This app needs permission to use this feature. You can grant them in app settings.</string>
    <string name="go_to_settings">GOTO SETTINGS</string>
    <string name="read_notification">Read Notification</string>
    <string name="notification">Notification</string>
    <string name="my_books">My Books</string>
    <string name="my_courses">My Courses</string>

    <string name="Rs">\u20B9</string>
    <string name="RupeeSymbol">₹</string>

    <string name="popup_menu_cancel">Cancel</string>
    <string name="popup_menu_delete">Delete</string>
    <string name="popup_menu_details">Details</string>
    <string name="download_message">There is no download\n Please start a download from Downloads page</string>
    <string name="permlab_downloadManager">Access download manager.</string>

    <string name="permdesc_downloadManager">Allows the app to
        access the download manager and to use it to download files.
        Malicious apps can use this to disrupt downloads and access
        private information.</string>

    <string name="permlab_downloadManagerAdvanced">Advanced download
        manager functions.</string>

    <string name="permdesc_downloadManagerAdvanced">Allows the app to
        access the download manager\'s advanced functions.
        Malicious apps can use this to disrupt downloads and access
        private information.</string>

    <string name="permlab_downloadCompletedIntent">Send download
        notifications.</string>

    <string name="permdesc_downloadCompletedIntent">Allows the app
        to send notifications about completed downloads. Malicious apps
        can use this to confuse other apps that download
        files.</string>

    <string name="permlab_downloadCacheNonPurgeable">Reserve space in the
    download cache</string>

    <string name="permdesc_downloadCacheNonPurgeable">Allows the app to
    download files to the download cache, which can\'t be automatically deleted
    when the download manager needs more space.</string>

    <string name="permlab_downloadWithoutNotification">download files without
        notification</string>

    <string name="permdesc_downloadWithoutNotification">Allows the app
    to download files through the download manager without any notification
    being shown to the user.</string>

    <string name="permlab_accessAllDownloads">Access all system
    downloads</string>

    <string name="permdesc_accessAllDownloads">Allows the app to view
    and modify all downloads initiated by any app on the system.</string>
    <string name="my_saved_courses">My Saved Courses</string>
    <string name="my_saved_books">My Saved Books</string>
    <string name="login_status">Login Status</string>

</resources>